# -macros-demo

./: Cargo.toml  README.md
macros/src/: lib.rs
mapping/: Cargo.toml
mapping/src/: deserialize.rs  helper.rs  lib.rs  mapping.rs
mymacros/: Cargo.toml
mymacros/src/: lib.rs  main.rs
proc_macros/: Cargo.toml
proc_macros/src/: deserialize.rs  field_attr.rs  field_struct.rs  helper.rs  lib.rs  mapping.rs  params_bind.rs
proc_macros_demo/: Cargo.toml
sonic-rs-demo/: Cargo.toml
sonic-rs-demo/src/: main.rs
volo_http_demo/: Cargo.toml
volo_http_demo/src/: lib.rs  main.rs  map.rs  mapping.rs  mapping_copy.rs
