[package]
name = "mapping"
version = "0.1.0"
edition = "2024"
[lib]
proc-macro = true

[dependencies]
faststr = "0.2.32"
heck = "0.5.0"
linked-hash-map = "0.5.6"
mime = "0.3.17"
proc-macro2 = "1.0.101"
quote = "1.0.40"
serde = "1.0.228"
serde_urlencoded = "0.7.1"
sonic-rs = "0.5.6"
syn = "2.0.106"
volo-http = "0.5.0"
